<resources>
    <string name="app_name">Pep Band App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="attendance_menu">Attendance</string>
    <string name="members_menu">Members</string>

    <string name="home_second">Home Second</string>
    <string name="schedule_title">Schedule</string>
    <string name="attendance_title">Attendance</string>
    <string name="members_title">Members</string>
    <string name="fordham_band_title">Fordham University Band</string>
    <string name="band_nav_subtitle">afuband@fordham.edu</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="instrument">Instrument</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="read_in">Read In</string>
    <string name="information">Information</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="search_event">Search Event</string>
    <string name="go_to_plot">Go To Plot</string>
    <string name="event_info">Event Info</string>
    <string name="event_location">Event Location</string>
    <string name="back_to_schedule">Back to Schedule</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="member_name">Member Name</string>
    <string name="member_year">Member Year</string>
    <string name="member_instrument">Member Instrument</string>
    <string name="member_email">Member Email</string>
    <string name="back_to_members">Back to Members</string>
    <string name="group_by_year">Group By Year</string>
    <string name="group_by_instrument">Group By Instrument</string>
    <string name="attendance_member_name">member name</string>
    <string name="wipe_member_data">Erase member data</string>
    <string name="wipe_event_data">Erase event data</string>
    <string name="pop_up_text">Are you sure you want to delete all events from the database?</string>
    <string name="pop_up_irreversible_text">This action is irreversible.</string>
    <string name="delete_text">Delete events</string>
    <string name="back_button">Back</string>
    <string name="wipe_attendance_data">Erase attendance data</string>
</resources>
