<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/customborder">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/event_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/event_info"
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/event_info" />


    <TextView
        android:id="@+id/event_location"
        android:layout_width="7dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/event_location" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="7dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/event_date" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>