<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.pepbandapp.ui.home.ScheduleFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_schedule">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.pepbandapp.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_events" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.example.pepbandapp.ui.gallery.AttendanceFragment"
        android:label="@string/attendance_menu"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/nav_members"
        android:name="com.example.pepbandapp.ui.slideshow.MembersFragment"
        android:label="@string/members_menu"
        tools:layout="@layout/fragment_members" />
</navigation>