<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/members_drawer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/events_toolbar" />

        <LinearLayout
            android:id="@+id/column_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/studentname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instrument_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instrument"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/member_list"
            android:layout_width="match_parent"
            android:layout_height="411dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_readin"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="left|center_vertical"
                android:onClick="readInMembers"
                android:text="@string/read_in" />

            <Button
                android:id="@+id/button_group_year"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:onClick="groupByYear"
                android:text="@string/group_by_year" />

            <Button
                android:id="@+id/button_group_instrument"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center_vertical"
                android:onClick="groupByInstrument"
                android:text="@string/group_by_instrument"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/editText_layout"
                android:layout_width="236dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/membername_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/member_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/memberyear_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/member_year"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/memberinstrument_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/member_instrument"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/memberemail_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/member_email"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addRemoveLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="105dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="addMemberButtonClicked"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="105dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="deleteMemberButtonClicked"
                    android:text="@string/remove"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:translationZ="2dp"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>