<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/schedule_drawer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/this_layout"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/events_toolbar" />

        <LinearLayout
            android:id="@+id/column_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="333dp"
            app:layout_constraintTop_toBottomOf="@+id/column_title_layout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/editTextsLinLayout"
                android:layout_width="292dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/eventname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/event_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/eventinfo_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/event_info"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/eventlocation_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/event_location"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/date_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/event_date"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_readin"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:onClick="readInEvents"
                    android:text="@string/read_in" />

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:onClick="addButtonClicked"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="deleteButtonClicked"
                    android:text="@string/remove"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    android:translationZ="2dp"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>